--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,8 +18,8 @@ jobs:
       with:
         dotnet-version: 5.0.x
     - name: Restore dependencies
-      run: dotnet restore 
+      run: dotnet restore --path GameAppBV/GameAppBVTests1/
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build --path GameAppBV/GameAppBVTests1/ --no-restore
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test --path GameAppBV/GameAppBVTests1/ --no-build --verbosity normal
