--- a/GameAppBV/GameAppBV/GameAppBV.csproj
+++ b/GameAppBV/GameAppBV/GameAppBV.csproj
@@ -113,8 +113,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include=".github\workflows\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
