--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -19,6 +19,9 @@ jobs:
         dotnet-version: 5.0.x
     - name: Restore dependencies
       run: dotnet restore ./GameAppBV/GameAppBVTests1/
+    - name: Msbuild
+      uses: microsoft/setup-msbuild@v1.0.0
+      
     - name: Build
       run: dotnet build --no-restore ./GameAppBV/GameAppBVTests1/
     - name: Test
