--- a/GameAppBV/GameAppBV/GameAppBV.csproj
+++ b/GameAppBV/GameAppBV/GameAppBV.csproj
@@ -69,11 +69,11 @@
     <Compile Include="Forms\Bank.Designer.cs">
       <DependentUpon>Bank.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\Extra.cs">
+    <Compile Include="Forms\Calculator.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\Extra.Designer.cs">
-      <DependentUpon>Extra.cs</DependentUpon>
+    <Compile Include="Forms\Calculator.Designer.cs">
+      <DependentUpon>Calculator.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\Home.cs">
       <SubType>Form</SubType>
@@ -102,6 +102,9 @@
     <Compile Include="Classes\User.cs" />
     <EmbeddedResource Include="Forms\Bank.resx">
       <DependentUpon>Bank.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Calculator.resx">
+      <DependentUpon>Calculator.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Home.resx">
       <DependentUpon>Home.cs</DependentUpon>
