--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -19,8 +19,12 @@ jobs:
       with:
         dotnet-version: 5.0.x
 
-    - name: Setup MSBuild
-      uses: microsoft/setup-msbuild@v1
+   # - name: Setup MSBuild
+    #  uses: microsoft/setup-msbuild@v1
+
+    - name: Setup MSBuild.exe
+      uses: warrenbuckley/Setup-MSBuild@v1
+
     
     - name: Install dependencies
       run: dotnet restore "${{ github.workspace }}/GameAppBV/GameAppBV.sln"
