--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -32,8 +32,8 @@ jobs:
   
     - name: Build DotNet
       run: |
-           cd "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\MSBuild\Current\Bin"
-           .\MSBuild.exe "${{ github.workspace }}/GameAppBV/GameAppBV.sln" --configuration Release --no-restore
+           cd "C:/Program Files/Microsoft Visual Studio/2022/Enterprise/MSBuild/Current/Bin"
+           ./MSBuild.exe "${{ github.workspace }}\GameAppBV\GameAppBV.sln" --configuration Release --no-restore
            
 
 # $Env:GITHUB_WORKSPACE\GameAppBV\GameAppBV.sln --configuration Release --no-restore
