--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -27,13 +27,25 @@ jobs:
     
     - name: Install dependencies
       run: dotnet restore "${{ github.workspace }}/GameAppBV/GameAppBV.sln"
+      
+    - name: setup-msbuild
+      uses: microsoft/setup-msbuild@v1.1
+      with:
+    # Folder location of where vswhere.exe is located if a self-hosted agent
+        #vswhere-path: # optional
+    # Version of Visual Studio to search; defaults to latest if not specified
+       # vs-version: # optional
+    # Enable searching for pre-release versions of Visual Studio/MSBuild
+       # vs-prerelease: # optional
+    # The preferred processor architecture of MSBuild. Can be either "x86" or "x64". "x64" is only available from Visual Studio version 17.0 and later.
+        msbuild-architecture: x64 # optional, default is x86
   
     
   
-    - name: Build DotNet
-      run: |
-           cd "C:/Program Files/Microsoft Visual Studio/2022/Enterprise/MSBuild/Current/Bin"
-           ./MSBuild.exe "${{ github.workspace }}\GameAppBV\GameAppBV.sln" --configuration Release --no-restore
+   # - name: Build DotNet
+    #  run: |
+      #     cd "C:/Program Files/Microsoft Visual Studio/2022/Enterprise/MSBuild/Current/Bin"
+        #   ./MSBuild.exe "${{ github.workspace }}\GameAppBV\GameAppBV.sln" --configuration Release --no-restore
            
 
 # $Env:GITHUB_WORKSPACE\GameAppBV\GameAppBV.sln --configuration Release --no-restore
