--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -45,7 +45,7 @@ jobs:
    # - name: Build DotNet
     #  run: |
       #     cd "C:/Program Files/Microsoft Visual Studio/2022/Enterprise/MSBuild/Current/Bin"
-        #   ./MSBuild.exe "${{ github.workspace }}\GameAppBV\GameAppBV.sln" --configuration Release --no-restore
+        #   ./MSBuild.exe "${{ github.workspace }}\GameAppBV\GameAppBV.sln" --configuration Release #--no-restore
            
 
 # $Env:GITHUB_WORKSPACE\GameAppBV\GameAppBV.sln --configuration Release --no-restore
@@ -55,7 +55,7 @@ jobs:
 
 #dotnet build
     - name: Build
-      run: msbuild "${{ github.workspace }}/GameAppBV/GameAppBV.sln" -property:Configuration=Release --no-restore
+      run: msbuild "${{ github.workspace }}/GameAppBV/GameAppBV.sln" -property:Configuration=Release #--no-restore
     
     - name: Test
       run: |
