--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -61,9 +61,11 @@ jobs:
       run: |
         dotnet test "${{ github.workspace }}/GameAppBV/GameAppBV.sln" --no-restore --verbosity normal 
       
+      #/GameAppBV/GameAppBV/GameAppBV.csproj
+      
     - name: Publish
       run: |
-        dotnet publish "${{ github.workspace }}/GameAppBV/GameAppBV/GameAppBV.csproj" -c Release -o GameAppBV
+        dotnet publish "${{ github.workspace }}/GameAppBV/GameAppBV.sln" -c Release -o GameAppBV
     
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v2.2.0
